# DeployAIAgent

./: .gitignore  README.md  agent.py  agent2.py  main.py  note_management_agent.py  notes.txt  pyproject.toml  requirements.txt
pages/: index.html
